--- a/about_page.html
+++ b/about_page.html
@@ -87,6 +87,6 @@
         <!-- scripts -->
         <script src="static/js/jquery.min.js"></script>
         <script src="static/js/bootstrap.min.js"></script>
-
+        {{ google_analytics() }}
     </body>
 </html>
