--- a/post.html
+++ b/post.html
@@ -98,6 +98,6 @@ if 'comments' in page:
         <!-- scripts -->
         <script src="static/js/jquery.min.js"></script>
         <script src="static/js/bootstrap.min.js"></script>
-
+        {{ google_analytics() }}
     </body>
 </html>
