--- a/page.html
+++ b/page.html
@@ -84,6 +84,6 @@
         <!-- scripts -->
         <script src="static/js/jquery.min.js"></script>
         <script src="static/js/bootstrap.min.js"></script>
-
+        {{ google_analytics() }}
     </body>
 </html>
